2009-02-25  Ojan Vafai  <ojan@chromium.org>

Reviewed by Eric Seidel.

        Fix test regressions from positionForCoordinates patch.
        https://bugs.webkit.org/show_bug.cgi?id=24148

        * rendering/RenderBlock.cpp:
        (WebCore::positionForPointWithInlineChildren):
        Remove ASSERT that placeholder text codepath is hitting.

git-svn-id: svn://svn.chromium.org/blink/trunk@41237 bbb929c8-8fbe-4397-9dbb-9b2b20218538